fix: enhance garbage collection performance