@@ -1,7 +1,11 @@
 #!/bin/sh
 cd "$(dirname "$0")" || exit
 java \
-  -XX:+UseZGC \
+  -Xmx1280M \
+  -Xms1280M \
+  -XX:+UseSerialGC \
+  -XX:-UseParallelGC \
+  -XX:NewRatio=1 \
   -jar teamgruen-player.jar \
   --batch-mode \
   --play-style weighted \
